--- a/package.json
+++ b/package.json
@@ -2,11 +2,21 @@
   "name": "@valeriom91-org/common",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./build/index.js",
+  "types": "./build/index.d.ts",
+  "files": [
+    "build/**/*"
+  ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "clean": "del ./build/**/*",
+    "build": "pnpm clean && tsc",
+    "pub": "git add . && git commit -m \"updates\" && npm version patch && pnpm build && npm publish"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "del-cli": "^5.1.0",
+    "typescript": "^5.3.3"
+  }
 }
