--- a/package.json
+++ b/package.json
@@ -16,7 +16,16 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/cookie-session": "^2.0.48",
+    "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.6",
     "del-cli": "^5.1.0",
     "typescript": "^5.3.3"
+  },
+  "dependencies": {
+    "cookie-session": "^2.1.0",
+    "express": "^4.18.3",
+    "express-validator": "^7.0.1",
+    "jsonwebtoken": "^9.0.2"
   }
 }
