error handler update

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "clean": "del ./build/**/*",
     "build": "pnpm clean && tsc",
-    "pub": "git add . && git commit -m \"updates\" && npm version patch && pnpm build && npm publish"
+    "pub": "npm version patch && pnpm build && npm publish"
   },
   "keywords": [],
   "author": "",
